test/parse/relaxed/bad/maxvarexceededinvline1.sol
s SATISFIABLE
v 1 2 2147483649
v 3 0
